--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AppCompat.Light"
         tools:targetApi="31">
         <activity
+            android:name=".Compras"
+            android:exported="false" />
+        <activity
             android:name=".Ventas"
             android:exported="false" />
         <activity
